# Dr.Tools

./: .editorconfig  .gitignore  CONTRIBUTING.md  DESIGN_SYSTEM.md  LICENSE  README.en.md  README.md  design-system-preview.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/architecture/: overview.md
docs/design/: UI_DESIGN_SPEC.md
docs/development/: project-structure.md
scripts/: bump-version.mjs
src/: App.vue  bootstrap.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: AppIcon.icns  icon.icns
src-tauri/migrations/: 001_init.sql  002_download_batches.sql  003_recording_accounts.sql  004_recording_account_rules.sql
src-tauri/python/: batch_worker.py  main.py  recording_worker.py  requirements-runtime.txt
src-tauri/python/core/: __init__.py  dispatcher.py
src-tauri/python/tasks/: recording_account_resolve.py  recording_live_status_check.py  stub.py  token_validate.py  video_download.py
src-tauri/src/: error.rs  main.rs
src-tauri/src/application/: app_state.rs
src-tauri/src/commands/: mod.rs  recording.rs  settings.rs  system.rs  tasks.rs  windowing.rs
src-tauri/src/domain/: models.rs
src-tauri/src/repositories/: database.rs  mod.rs
src-tauri/src/services/: download_queue.rs  download_worker.rs  mod.rs  process.rs  recording_scheduler.rs  runtime_log.rs
src-tauri/src/services/python/: mod.rs
src/api/: system.api.ts
src/i18n/: index.ts
src/layouts/: SidebarNav.vue
src/lib/: errors.ts
(+30 files in other folders)
