[package]
name = "dr-tools"
version = "0.1.2"
description = "Dr.Tools desktop foundation"
authors = ["west"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
flate2 = "1.1.2"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rfd = "0.15.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.44"
tauri = { version = "2", features = [] }
thiserror = "1.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
